# ChangeLog for x11-libs/fox
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.68 2006/12/17 12:29:06 mabi Exp $

  10 Dec 2006; Matti Bickel <mabi@gentoo.org> -fox-1.0.49.ebuild,
  -fox-1.0.53.ebuild, -fox-1.5.4.ebuild:
  Cleanup (bug #153234)

  05 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> fox-1.2.18-r1.ebuild,
  fox-1.4.34-r1.ebuild:
  Stable on sparc

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> fox-1.2.18-r1.ebuild,
  fox-1.4.34-r1.ebuild:
  Stable on ppc64; bug #145046

*fox-1.6.19 (14 Nov 2006)

  14 Nov 2006; Matti Bickel <mabi@gentoo.org> -fox-1.6.14.ebuild,
  +fox-1.6.19.ebuild:
  Version bump, remove old version

  14 Nov 2006; Guy Martin <gmsoft@gentoo.org> fox-1.2.18-r1.ebuild:
  Stable on hppa.

  12 Nov 2006; Guy Martin <gmsoft@gentoo.org> ChangeLog:
  Stable on hppa.

  05 Nov 2006; Daniel Gryniewicz <dang@gentoo.org> fox-1.4.34-r1.ebuild:
  Marked stable on amd64 for bug #145046

  05 Nov 2006; Daniel Gryniewicz <dang@gentoo.org> fox-1.2.18-r1.ebuild:
  Marked stable on amd64 for bug #145046

  31 Oct 2006; Christian Faulhammer <opfer@gentoo.org> fox-1.2.18-r1.ebuild,
  fox-1.4.34-r1.ebuild:
  stabled on x86 due to bug #145046

  28 Oct 2006; Matti Bickel <mabi@gentoo.org> fox-1.2.18-r1.ebuild,
  fox-1.4.34-r1.ebuild:
  Stable on ppc (bug #145046)

*fox-1.6.16 (28 Oct 2006)

  28 Oct 2006; Matti Bickel <mabi@gentoo.org> +fox-1.6.16.ebuild:
  Version bump

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; fox-1.0.53.ebuild,
  fox-1.2.6-r3.ebuild, fox-1.2.18.ebuild, fox-1.2.18-r1.ebuild,
  fox-1.4.34.ebuild, fox-1.4.34-r1.ebuild, fox-1.5.4.ebuild,
  fox-1.6.14.ebuild:
  Remove virtual/x11 option from modular X deps.

*fox-1.4.34-r1 (24 Sep 2006)
*fox-1.2.18-r1 (24 Sep 2006)

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/1.2.18-gcc4-fix-includes.patch,
  +files/1.4.34-gcc4-fix-includes.patch, +fox-1.2.18-r1.ebuild,