@@ -1,12 +1,12 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/Attic/fox-1.2.18-r1.ebuild,v 1.8 2006/12/05 17:54:38 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/Attic/fox-1.2.18-r1.ebuild,v 1.9 2006/12/17 18:16:14 kloeri Exp $
 
 inherit eutils toolchain-funcs flag-o-matic fox
 
 LICENSE="LGPL-2.1"
 SLOT="1.2"
-KEYWORDS="~alpha amd64 hppa ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ppc ppc64 sparc x86"
 IUSE="bzip2 cups jpeg opengl png threads tiff truetype zlib"
 
 RDEPEND="x11-libs/libXrandr
