@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/fox
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.68 2006/12/17 12:29:06 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fox/ChangeLog,v 1.69 2006/12/17 18:16:14 kloeri Exp $
+
+  17 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> fox-1.2.18-r1.ebuild,
+  fox-1.4.34-r1.ebuild:
+  Stable on Alpha, bug 145046.
 
   10 Dec 2006; Matti Bickel <mabi@gentoo.org> -fox-1.0.49.ebuild,
   -fox-1.0.53.ebuild, -fox-1.5.4.ebuild:
